# rime

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: file.rs  frame.rs  i3file.rs  i3frame.rs  lib.rs  module.rs  tray.rs
