[package]
name = "core"
version = "0.1.0"
authors = ["David Schultz <davids24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rmp-serde = "^0.14.0" # version 0.14.x
bincode = "^1.2.1"
serde = {version = "*", features = ["derive"] }
erased-serde = "*"
typetag = "^0.1.4"
tokio = {version = "0.2", features = ["rt-threaded", "macros", "sync", "fs"] }